--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ nav button:hover{
 
 /* header */
 header{
-    background-image: url("/img/_DSC0193.jpg");
+    background-image: url("./img/_DSC0193.jpg");
     height: 500px;
     background-position: center;
     background-repeat: no-repeat;
